classDiagram
    class BackgroundService {
        <<abstract>>
        +ExecuteAsync(CancellationToken)* Task
    }

    class ReminderWorker {
        -ReminderOptions _options
        +ExecuteAsync()
        +ProcessAsync() Task
    }

    class DataRetentionWorker {
        -DataRetentionOptions _options
        +ExecuteAsync()
        +ProcessAsync() Task~DataRetentionResult~
    }

    class IConsumer~T~ {
        <<interface>>
        +Consume(ConsumeContext~T~) Task
    }

    class SendReminderConsumer {
        +Consume(ConsumeContext~SendReminderCommand~) Task
        -BuildMessage(SendReminderCommand) string
    }

    class SendReminderCommand {
        +string EncounterId
        +string PatientId
        +string ReminderWindow
        +DateTime EncounterStart
        +string? ServiceType
        +string Provider
    }

    BackgroundService <|-- ReminderWorker
    BackgroundService <|-- DataRetentionWorker
    IConsumer~SendReminderCommand~ <|.. SendReminderConsumer
    SendReminderConsumer ..> SendReminderCommand : consumes
    ReminderWorker ..> SendReminderCommand : publishes